--- a/soc_auth/templates/soc_auth/index.html
+++ b/soc_auth/templates/soc_auth/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My fake blog!</title>
+  <title>Login</title>
 
   <link
     rel="stylesheet"
@@ -13,24 +13,10 @@
 </head>
 <body>
   <div class="jumbotron">
-    <h1>My fake blog!</h1>
-    {% if user.is_authenticated %}
-      <p>Logged as {{ user.username }}</p>
-      <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
-    <form method = "POST" enctype="multipart/form-data" class = "post-form">{% csrf_token %}
-        {{form.as_p}}
-        <button type = "submit" class = "save btn btn-default">Save</button>
-      </form>
-      {% if img_obj %}
-        <h3>Succesfully uploaded : {{img_obj.title}}</h3>
-        <img src="{{img_obj.image.url}}" alt="connect" style="max-height:300px">
-      {% endif %}
-      
-    {% else %}
+    <h1>Please log in.</h1>
       <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
         Login
       </a>
-      {% endif %}
   </div>
 
 </body>
